AC_INIT(Makefile.am)
AM_INIT_AUTOMAKE(bdt-ltfs,0.1)
AM_PATH_CPPUNIT(1.9.6)
AC_ARG_ENABLE([fast],
    [AS_HELP_STRING([--enable-fast],[without debug support (default is no)])],
    [CXXFLAGS="$(CXXFLAGS) -DNDEBUG -O2"],
    [CXXFLAGS="$(CXXFLAGS) -DDEBUG -g -O0"])
AC_PROG_CXX
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
